--- a/package.json
+++ b/package.json
@@ -143,18 +143,22 @@
   "dependencies": {
     "@angular-devkit/build-optimizer": "^0.4.0",
     "@angular/animations": "^5.2.3",
+    "@angular/cdk": "^5.2.4",
     "@angular/common": "^5.2.3",
     "@angular/compiler": "^5.2.3",
     "@angular/core": "^5.2.3",
     "@angular/forms": "^5.2.3",
+    "@angular/material": "^5.2.4",
     "@angular/platform-browser": "^5.2.3",
     "@angular/platform-browser-dynamic": "^5.2.3",
     "@angular/router": "^5.2.3",
     "@angular/service-worker": "^5.2.3",
     "core-js": "^2.5.3",
+    "hammerjs": "^2.0.8",
     "intl": "^1.2.5",
     "rxjs": "^5.5.3",
     "systemjs": "0.21.0",
+    "web-animations-js": "^2.3.1",
     "zone.js": "0.8.20"
   }
 }
